--- a/OthelloApp.html
+++ b/OthelloApp.html
@@ -17,7 +17,7 @@
           <div class="columns is-centered">
             <div class="column">
               <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">Othello Android App</h1>
-              <h2 class="subtitle is-size-4-tablet" style="color: red;">[Short Description]</h2>
+              <h2 class="subtitle is-size-4-tablet">An app to play the game Othello, with advanced back-end logic to control piece placement and win conditions.</h2>
               <img class="project-image" style="width: 400px;" src="img/OthelloGamePlay.png">
             </div>
           </div>
@@ -28,7 +28,8 @@
       <div class="container">
         <div class="columns is-centered">
           <div class="column is-three-fifths">
-            <h2 class="subtitle is-size-5-desktop has-text-weight-normal" style="color: red;">[Full Description]</h2>
+            <h2 class="subtitle is-size-5-desktop has-text-weight-normal" style="color: red;">[Full Description] Working in Android Studio, I created an Othello app. It's built with a modular interface system and a seamlessly integrated back-end logic system to allow easy changes and customization. It runs complex logic in the background to compute where the player is allowed to place pieces, and displays the locations on the game board. It's designed to be simple but fast, calculating positions and win conditions as quickly as possible to provide a seamless user experience.<br>
+            This gave me an in-depth understanding of how to build mobile applications, and helped me learn how to make modular applications where components can easily be swapped out and customized to fit the project needs.</h2>
           </div>
         </div>
       </div>
@@ -40,8 +41,8 @@
             <div class="columns is-centered">
               <div class="column">
                 <!--Space for image-->
-                <h1 class="title is-size-4 is-spaced">Website</h1>
-                <p>I built the primary structure and function of the website for the project</p>
+                <h1 class="title is-size-4 is-spaced">Interface</h1>
+                <!--<p>I built the primary structure and function of the website for the project</p>-->
                 <!--<p class="list-title has-text-primary has-text-weight-normal">Things I enjoy designing:</p>
                 <p>UX, UI, Web, Apps, Logos</p>-->
                 <p class="list-title has-text-primary has-text-weight-normal">Dev Tools:</p>
@@ -54,33 +55,30 @@
               </div>
               <div class="column">
                 <!--Space for image-->
-                <h1 class="title is-size-4 is-spaced">Database</h1>
-                <p>I was primarily responsible for the database and data ingestion system</p>
+                <h1 class="title is-size-4 is-spaced">Application Framework</h1>
+                <!--<p>I was primarily responsible for the database and data ingestion system</p>-->
                 <!--<p class="list-title has-text-primary has-text-weight-normal">Languages I speak:</p>
                 <p>HTML, Pug, Slim, CSS, Sass, Git</p>-->
                 <p class="list-title has-text-primary has-text-weight-normal">Dev Tools:</p>
                 <ul>
-                  <li>Postgres</li>
-                  <li>Azure</li>
-                  <li>Data Mining</li>
-                  <li>Python</li>
-                  <li>REST</li>
-                  <li>Javascript</li>
+                  <li>Android Studio</li>
+                  <li>Modular Design</li>
+                  <li>Event System</li>
+                  <li>Kotlin</li>
                 </ul>
               </div>
               <div class="column">
                 <!--Space for image-->
-                <h1 class="title is-size-4 is-spaced">Machine Learning</h1>
-                <p>I helped get the machine learning segment of the project running, and managed post-processing the results</p>
+                <h1 class="title is-size-4 is-spaced">Logic Layer</h1>
+                <!--<p>I helped get the machine learning segment of the project running, and managed post-processing the results</p>-->
                 <!--<p class="list-title has-text-primary has-text-weight-normal">Experiences I draw from:</p>
                 <p>UX/UI, Product design, Freelancing</p>-->
                 <p class="list-title has-text-primary has-text-weight-normal">Dev Tools:</p>
                 <ul>
-                  <li>Azure ML</li>
-                  <li>Javascript</li>
-                  <li>Post-processing</li>
-                  <li>Data Management</li>
-                  <li>HTTP Requests</li>
+                  <li>Advanced Logic</li>
+                  <li>Efficient Algorithms</li>
+                  <li>Array Processing</li>
+                  <li>Error Checking</li>
                 </ul>
               </div>
             </div>
