--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="container">
           <div class="columns is-centered">
             <div class="column">
-              <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile" style="color: red;">[Tagline] Example: Designer, Frontend Developer &amp; Mentor</h1>
-              <h2 class="subtitle is-size-4-tablet" style="color: red;">[Description] Example: I design and code beautifully simple things, and I love what I do.</h2>
+              <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">Full-Stack Development, Database Integration, & Cloud Technologies</h1>
+              <h2 class="subtitle is-size-4-tablet">Entry-Level Software Engineer building seamless connections between back-end systems and user interfaces</h2>
             </div>
           </div>
         </div>
