--- a/OthelloApp.html
+++ b/OthelloApp.html
@@ -28,7 +28,7 @@
       <div class="container">
         <div class="columns is-centered">
           <div class="column is-three-fifths">
-            <h2 class="subtitle is-size-5-desktop has-text-weight-normal" style="color: red;">[Full Description] Working in Android Studio, I created an Othello app. It's built with a modular interface system and a seamlessly integrated back-end logic system to allow easy changes and customization. It runs complex logic in the background to compute where the player is allowed to place pieces, and displays the locations on the game board. It's designed to be simple but fast, calculating positions and win conditions as quickly as possible to provide a seamless user experience.<br>
+            <h2 class="subtitle is-size-5-desktop has-text-weight-normal">Working in Android Studio, I created an Othello app. It's built with a modular interface system and a seamlessly integrated back-end logic system to allow easy changes and customization. It runs complex logic in the background to compute where the player is allowed to place pieces, and displays the locations on the game board. It's designed to be simple but fast, calculating positions and win conditions as quickly as possible to provide a seamless user experience.
             This gave me an in-depth understanding of how to build mobile applications, and helped me learn how to make modular applications where components can easily be swapped out and customized to fit the project needs.</h2>
           </div>
         </div>
@@ -47,10 +47,9 @@
                 <p>UX, UI, Web, Apps, Logos</p>-->
                 <p class="list-title has-text-primary has-text-weight-normal">Dev Tools:</p>
                 <ul>
-                  <li>Azure Web Services</li>
-                  <li>REST</li>
-                  <li>React</li>
-                  <li>Bing Maps API</li>
+                  <li>XML</li>
+                  <li>Code-Driven UI</li>
+                  <li>Adaptable Layouts</li>
                 </ul>
               </div>
               <div class="column">
