News App Skills

--- a/NewsApp.html
+++ b/NewsApp.html
@@ -41,46 +41,42 @@
               <div class="column">
                 <!--Space for image-->
                 <h1 class="title is-size-4 is-spaced">Display</h1>
-                <p>I built the primary structure and function of the website for the project</p>
+                <p>Displaying feeds and articles.</p>
                 <!--<p class="list-title has-text-primary has-text-weight-normal">Things I enjoy designing:</p>
                 <p>UX, UI, Web, Apps, Logos</p>-->
                 <p class="list-title has-text-primary has-text-weight-normal">Dev Tools:</p>
                 <ul>
-                  <li>Azure Web Services</li>
-                  <li>REST</li>
-                  <li>React</li>
-                  <li>Bing Maps API</li>
+                  <li>Winforms</li>
+                  <li>Winforms Web Browser Module</li>
+                  <li>XML</li>
+                  <li>C#</li>
                 </ul>
               </div>
               <div class="column">
                 <!--Space for image-->
                 <h1 class="title is-size-4 is-spaced">Map</h1>
-                <p>I was primarily responsible for the database and data ingestion system</p>
+                <p>Searching each article for a relevant location and displaying it as a pin on a map.</p>
                 <!--<p class="list-title has-text-primary has-text-weight-normal">Languages I speak:</p>
                 <p>HTML, Pug, Slim, CSS, Sass, Git</p>-->
                 <p class="list-title has-text-primary has-text-weight-normal">Dev Tools:</p>
                 <ul>
-                  <li>Postgres</li>
-                  <li>Azure</li>
-                  <li>Data Mining</li>
-                  <li>Python</li>
-                  <li>REST</li>
-                  <li>Javascript</li>
+                  <li>Bing Maps API</li>
+                  <li>LINQ</li>
+                  <li>Event System</li>
                 </ul>
               </div>
               <div class="column">
                 <!--Space for image-->
                 <h1 class="title is-size-4 is-spaced">Feed Processor</h1>
-                <p>I helped get the machine learning segment of the project running, and managed post-processing the results</p>
+                <p>Converting RSS feeds into usable data.</p>
                 <!--<p class="list-title has-text-primary has-text-weight-normal">Experiences I draw from:</p>
                 <p>UX/UI, Product design, Freelancing</p>-->
                 <p class="list-title has-text-primary has-text-weight-normal">Dev Tools:</p>
                 <ul>
-                  <li>Azure ML</li>
-                  <li>Javascript</li>
-                  <li>Post-processing</li>
-                  <li>Data Management</li>
-                  <li>HTTP Requests</li>
+                  <li>RSS</li>
+                  <li>Error Checking and Handling</li>
+                  <li>Modular design</li>
+                  <li>Object Oriented Data</li>
                 </ul>
               </div>
             </div>
