--- a/NewsApp.html
+++ b/NewsApp.html
@@ -17,7 +17,7 @@
           <div class="columns is-centered">
             <div class="column">
               <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">RSS News Feed Manager</h1>
-              <h2 class="subtitle is-size-4-tablet" style="color: red;">[Short Description]</h2>
+              <h2 class="subtitle is-size-4-tablet">A system that allows users to manage news sources all in one place,<br>letting them organize news feeds and view articles.</h2>
               <img class="project-image" src="img/NewsMainPage.png">
             </div>
           </div>
@@ -25,13 +25,13 @@
       </div>
     </section>
     <section class="section is-medium is-primary has-text-centered is-long">
-      <div class="container">
+      <!--<div class="container">
         <div class="columns is-centered">
           <div class="column is-three-fifths">
             <h2 class="subtitle is-size-5-desktop has-text-weight-normal" style="color: red;">[Full Description]</h2>
           </div>
         </div>
-      </div>
+      </div>-->
     </section>
     <section class="section skills has-text-centered">
       <div class="container is-narrow">
