News App Description done

--- a/NewsApp.html
+++ b/NewsApp.html
@@ -25,13 +25,13 @@
       </div>
     </section>
     <section class="section is-medium is-primary has-text-centered is-long">
-      <!--<div class="container">
+      <div class="container">
         <div class="columns is-centered">
           <div class="column is-three-fifths">
-            <h2 class="subtitle is-size-5-desktop has-text-weight-normal" style="color: red;">[Full Description]</h2>
+            <h2 class="subtitle is-size-5-desktop has-text-weight-normal">A news feed management app with two different views, one that lists articles by news source and allows users to view them, and another that displays articles on a map based on detected keywords. It has a backend engine that takes a link to an RSS feed from the user, validates it, and stores article data. The user can then select a news source that they have added, see a list of articles, and select articles from that list to view in an integrated web browser. The map view uses Bing Maps API to show pins on article locations which, when clicked, open the article in the integrated browser.</h2>
           </div>
         </div>
-      </div>-->
+      </div>
     </section>
     <section class="section skills has-text-centered">
       <div class="container is-narrow">
