--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width">
-        <meta http-equiv='refresh' content='0; URL=https://admiralgama.github.io/portfolio/'>
+        <!--<meta http-equiv='refresh' content='0; URL=https://admiralgama.github.io/portfolio/'>-->
         
         <title>Admiral Gama's Site</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <div class="container">
-            <!--<h1>Admiral Gama's Site</h1>
+            <h1>Admiral Gama's Site</h1>
 
             <div class="centered">
                 <a href="portfolio"><button>Software Engineering Portfolio</button></a>
@@ -33,7 +33,7 @@
 
             <div class="centered">
                 <a href="socials.html"><button>Socials</button></a>
-            </div>-->
+            </div>
         </div>
     </body>
 </html>
